<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8E2E1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_arrow"
        app:tint="@color/navy_blue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/forget"
        android:textColor="@color/navy_blue"
        android:textSize="18dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/forget1"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:typeface="serif" />


    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"

        android:layout_marginRight="10dp"
        android:background="@drawable/sign_background"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text|number"
            android:backgroundTint="@color/background"
            android:paddingLeft="8dp"
            android:text="@string/country"
            android:textColor="@color/navy_blue"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/background"
            android:hint="@string/hint"
            android:inputType="phone|number"
            android:textColorHint="@color/background"
            android:paddingLeft="8dp"
            android:textColor="@color/navy_blue"
            android:typeface="serif"

            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="28dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_background"
            android:text="@string/button"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>