<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="@dimen/textSize"
        android:textColor="@color/background"
        android:layout_marginTop="60dp"
        />

    <LinearLayout
        android:id="@+id/individual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/linear">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user__1_"
            android:layout_margin="30dp"
            app:tint="@color/background"
            />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle"
                android:textColor="@color/background"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textSize="13sp"
                android:typeface="serif"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle1"
                android:textColor="@color/background"
                android:paddingTop="10dp"
                android:paddingRight="3dp"
                android:textSize="13sp"
                android:typeface="serif"
                />



        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Professional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/linear">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_briefcase_1"
            android:layout_margin="30dp"
            app:tint="@color/background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle2"
                android:textColor="@color/background"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textSize="13sp"
                android:typeface="serif"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle3"
                android:textColor="@color/background"
                android:paddingTop="10dp"
                android:paddingRight="3dp"
                android:textSize="13sp"
                android:typeface="serif"
                />



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Merchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/linear">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_store"
            android:layout_margin="30dp"
            app:tint="@color/background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tittle4"
                android:textColor="@color/background"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="serif" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle5"
                android:textColor="@color/background"
                android:paddingTop="10dp"
                android:paddingRight="3dp"
                android:textSize="13sp"
                android:typeface="serif"
                />



        </LinearLayout>

    </LinearLayout>





</LinearLayout>