<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8E2E1"
    tools:context=".SignInActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:elevation="12dp"
        android:id="@+id/view2"
        app:cardCornerRadius="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/image"

    />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="1dp"
        android:text="Your Global Community "
        android:textColor="@color/background"
        android:textSize="23dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="225dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/sign_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/getStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/started"
            android:textColor="@color/background"
            android:textSize="@dimen/textSize1"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text|number"
            android:paddingLeft="6dp"
            android:text="@string/country"
            android:textColor="@color/background"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/phoneNumber"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hint"
            android:textColorHint="@color/background"
            android:inputType="phone|number"
            android:paddingLeft="6dp"
            android:textColor="@color/background"
            android:typeface="serif"

            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_background"
            android:text="@string/button"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/changePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="45dp"
            android:gravity="center"
            android:text="@string/changeNumber"
            android:textColor="@color/background"
            android:textSize="17sp"
            android:typeface="serif"


            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"


        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/bolg_background"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/privacy"
            android:textSize="15dp"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:typeface="sans"

            />

    </LinearLayout>


</RelativeLayout>